--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <h1>Welcome to my homepage</h1>
   </br>
   <h4>Let's do something interesting</h4>
-  <img src="hello.jpg">
+  <img src="Hello.jpg">
  </body>
 </html>
