--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <title>MohamedDaoud GitHub Page</title>
  </head>
  <body>
-  <h1>Welcome to my homepage</h1>
-  </br>
-  <h4>Let's do something interesting</h4>
+  <h1>Welcome to my homepage</h1>  
+  <h3>The following statement is absolutely correct</h3>
   <img src="Hello.jpg">
  </body>
 </html>
