--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <h1>Welcome to my homepage</h1>  
   <h3>The following statement is absolutely correct</h3>
   <img src="Hello.jpg">
-  <a eth-hak.html> Ethical Page </a>
+  <a href="eth-hak.html"> Ethical Page </a>
  </body>
 </html>
