--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="utf-8">
-  <title>MohamedDaoud GitHub Page</title>
+  <title>Mohamed-Daoud Page</title>
  </head>
  <body>
   <h1>Welcome to my homepage</h1>  
