--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1>Welcome to my homepage</h1>  
   <h3>The following statement is absolutely correct</h3>
   <img src="Hello.jpg">
-  <a href="eth-hak.html"> Ethical Page </a>
+ </br>
+  <a href="eth-hak.html"> <h1>Ethical Page</h1> </a>
  </body>
 </html>
