--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <h3>The following statement is absolutely correct</h3>
   <img src="Hello.jpg">
  </br>
-  <a href="eth_hak.html"> <h1>Ethical Page</h1> </a>
+  <a href="eth_hak.html" target="_blank"> <h1>Ethical Page</h1> </a>
  </body>
 </html>
